--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,24 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+        
+        <profiles>
+            <profile>
+                <id>dev</id>
+                <properties>
+                    <activatedProperties>dev</activatedProperties>
+                </properties>
+                <activation>
+                    <activeByDefault>true</activeByDefault>
+                </activation>
+            </profile>
+            <profile>
+                <id>prod</id>
+                <properties>
+                    <activatedProperties>prod</activatedProperties>
+                </properties>
+            </profile>
+        </profiles>
 
 	<build>
 		<plugins>
@@ -75,6 +93,12 @@
 				</configuration>
 			</plugin>
 		</plugins>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <filtering>true</filtering>
+                    </resource>
+                </resources>
 	</build>
 
 </project>
