Actualizacion de front y back con reportes de reto5

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
+spring.security.oauth2.client.registration.github.clientId=76079cb687a371e47752
+spring.security.oauth2.client.registration.github.clientSecret=692ac5d3901cee7127f4d63f4c48e88c9f8f04a1
